# fastapi-prometheus-exporter

./: CHANGELOG.md  README.md  pyproject.toml
fastapi_prometheus_exporter/: __init__.py  prometheus.py
tests/: test_prometheus.py
