[tool.poetry]
name = "fastapi-prometheus-exporter"
version = "0.2.2"  # x-release-please-version
description = "FastAPI Prometheus Exporter"
authors = ["Yibu Ma"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
prometheus-client = "^0.19.0"


[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
coverage = "^7.1.0"
black = "^23.11.0"
diff-cover = "^8.0.1"
httpx = "^0.25.2"


[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.6"
pre-commit = "^3.0.2"
commitizen = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
